SFDC Automation/src/objects/Vehicle__c.object
<CustomObject>
    <description>Ryder Vehicles</description>
    <fields>
        <fullName>AD_INV_R_AM__c</fullName>
        <label>Schedule A Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_IS_Vehicle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AS IS Vehicle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accept_Vehicle_By_UTC_Date__c</fullName>
        <label>Accept Vehicle By UTC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup on Accounts</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Air_Cond_Mfg__c</fullName>
        <label>Air Cond Mfg</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Price__c</fullName>
        <label>Approved Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ask_Price__c</fullName>
        <label>Ask Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Axle_Count__c</fullName>
        <label>Axle Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BIPD_Ins__c</fullName>
        <label>BIPD Ins</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BankOfAmerica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BankOfAmerica</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_of_Sale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill of Sale</label>
        <referenceTo>UVS_Bill_of_Sale__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Body_Height__c</fullName>
        <label>Body Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Body_Length__c</fullName>
        <label>Body Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Body_MFG__c</fullName>
        <label>Body MFG</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Serial_Num__c</fullName>
        <label>Body Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_TYP__c</fullName>
        <label>Body Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Width__c</fullName>
        <label>Body Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Body_Year__c</fullName>
        <label>Body Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brake_Type__c</fullName>
        <label>Brake Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <label>Branch Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BreadCrumb_To__c</fullName>
        <formula>DATE(VALUE(LEFT(RSM_Last_Bread_Crumb__c, 4)),  VALUE(LEFT(SUBSTITUTE(RSM_Last_Bread_Crumb__c, LEFT(RSM_Last_Bread_Crumb__c, 5), &apos;&apos;) , 2)), VALUE(LEFT(SUBSTITUTE(RSM_Last_Bread_Crumb__c, LEFT(RSM_Last_Bread_Crumb__c, 8), &apos;&apos;) , 2))) - RSM_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BreadCrumb To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COMBINED_SNGL_LIMIT__c</fullName>
        <label>Combined Single Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COST_SHEET_NUM__c</fullName>
        <description>Cost Sheet Number</description>
        <label>Cost Sheet #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTRT_PCKG_ID__c</fullName>
        <label>Package ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_BRANCH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field for Customer Branch</description>
        <label>Customer Branch</label>
        <referenceTo>Customer_Branch__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CUST_ACCOMMODATION__c</fullName>
        <label>Customer Accommodation</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cab_Type__c</fullName>
        <label>Cab Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chassis_Serial_Num__c</fullName>
        <label>Chassis Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chassis_Type__c</fullName>
        <label>Chassis Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>VEH_CMNT_TX</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Vehicles__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Vehicles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Veh_No__c</fullName>
        <description>This field stores the Customer&apos;s Internal Vehicle No</description>
        <inlineHelpText>This field stores the Customer&apos;s Internal Vehicle No</inlineHelpText>
        <label>Customer Internal Vehicle No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOOR_SIDE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DOOR_C IS null then &apos;N&apos; else &apos;Y&apos;</description>
        <label>DOOR SIDE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_At_UTC__c</fullName>
        <label>Days At UTC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Door_B__c</fullName>
        <label>Door B</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Door_C__c</fullName>
        <label>Door C</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Door_R__c</fullName>
        <label>Door_R</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFF_RT_DT__c</fullName>
        <description>Rate Sheet Effective Date</description>
        <inlineHelpText>Rate Sheet Effective Date</inlineHelpText>
        <label>Ext. Starts</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ENG_CYC_QN__c</fullName>
        <label>Engine CYC QN</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENG_EST_LIFE__c</fullName>
        <label>Engine Est. Life</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENG_FUEL_TYP__c</fullName>
        <label>Engine Fuel Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_HP__c</fullName>
        <label>Engine HP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENG_MDL__c</fullName>
        <label>Engine Model</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_MFG__c</fullName>
        <label>Engine MFG</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_RPM__c</fullName>
        <label>Engine RPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENG_TYP__c</fullName>
        <label>Engine Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVA__c</fullName>
        <label>EVA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPIRATION_DATE__c</fullName>
        <description>Expiration Date</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXP_501__c</fullName>
        <label>EXP_501</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXP_502__c</fullName>
        <label>EXP 502</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXP_503__c</fullName>
        <label>EXP 503</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXT_EFF_DT__c</fullName>
        <description>Extension Effective Date</description>
        <inlineHelpText>Extension Effective Date</inlineHelpText>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Engine_Serial__c</fullName>
        <label>Engine Serial</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Build_Date__c</fullName>
        <label>Est Build Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FHUT__c</fullName>
        <label>FHUT</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FIS Account lookup field</description>
        <label>FIS Account</label>
        <referenceTo>FIS_Account__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FUEL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fuel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Revenue_Date__c</fullName>
        <label>First Revenue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_Rate__c</fullName>
        <label>Fixed Rate</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GVW_RIDE__c</fullName>
        <label>GVW RIDE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GVW_SAM__c</fullName>
        <label>GVW SAM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gain_Loss__c</fullName>
        <label>Gain Loss</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gear_Ratio__c</fullName>
        <label>Gear Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Vehicle_Weight__c</fullName>
        <label>Gross Vehicle Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRS_OPERATION__c</fullName>
        <label>Hours Operation</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_SERVICE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ID Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Service_Date__c</fullName>
        <label>In Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Expiration_Date__c</fullName>
        <label>Insurance Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Available_For_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag used to mark available for Used Vehicle Sale</description>
        <label>Is Available For Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jbrake_Type__c</fullName>
        <label>Jbrake Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_UPDATED_DATE__c</fullName>
        <description>Last Updated Date</description>
        <label>Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LIABILITY_INSR_BY__c</fullName>
        <label>Liability Insurance Provider</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIABILITY_INSURANCE_DEDUCTIBLE__c</fullName>
        <label>Liability Insurance Deductible</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LIFT_GATE_MDL__c</fullName>
        <label>Lift Gate MDL</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIFT_GATE_MFG__c</fullName>
        <label>Lift Gate MFG</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIFT_GATE_Weight__c</fullName>
        <label>Lift Gate Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LIFT_GATE_Year__c</fullName>
        <label>Lift Gate Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_12_Months_Fixed_Cost__c</fullName>
        <label>Last 12 Months - Fixed Cost</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_Months_Miles__c</fullName>
        <label>Last 12 Months - Miles</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_Months_Rated_Cost__c</fullName>
        <label>Last 12 Months - Running Cost</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_Months_Revenue__c</fullName>
        <label>Last 12 Months - Revenue</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_months_margin__c</fullName>
        <description>Profit margin for unit in the last 12 months</description>
        <formula>IF( Last_12_Months_Revenue__c  &lt;&gt; 0,
 ( Last_12_Months_Revenue__c  -  Last_12_Months_Fixed_Cost__c  -  Last_12_Months_Rated_Cost__c ) /  Last_12_Months_Revenue__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 12 months margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Month_Fixed_Cost__c</fullName>
        <label>Last Month - Fixed Cost</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Miles__c</fullName>
        <label>Last Month - Miles</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Rated_Cost__c</fullName>
        <label>Last Month - Running Cost</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Revenue__c</fullName>
        <label>Last Month - Revenue</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Revenue_Date__c</fullName>
        <label>Latest Revenue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date__c</fullName>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Tag_No__c</fullName>
        <label>License Tag Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Tag_State__c</fullName>
        <label>License Tag State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Life_to_Date_Fixed_Cost__c</fullName>
        <label>Life to Date - Fixed Cost</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Life_to_Date_Miles__c</fullName>
        <label>Life to Date - Miles</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Life_to_Date_Rated_Cost__c</fullName>
        <label>Life to Date - Running Cost</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Life_to_Date_Revenue__c</fullName>
        <label>Life to Date - Revenue</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lift_Gate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LIFT_GATE_MFG is null then &apos;n&apos; else &apos;y&apos;</description>
        <label>Lift Gate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MILES__c</fullName>
        <label>Miles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage_Rate__c</fullName>
        <label>Mileage Rate</label>
        <precision>11</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <description>Year of the vehicle</description>
        <label>Model Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Months_Service_in__c</fullName>
        <description>This formula calculates the months the unit has been with the customer from the inservice date to the first of the end of the previous month</description>
        <formula>IF(
OR( ISBLANK(In_Service_Date__c),(In_Service_Date__c&gt;TODAY()-DAY(TODAY()))
), 0 , (((YEAR(TODAY()-DAY(TODAY()) ) - YEAR(In_Service_Date__c) - 1) *12) + (12 - MONTH(In_Service_Date__c) ) + MONTH(TODAY()-DAY(TODAY()) ))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Months In Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NBV__c</fullName>
        <label>Book Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NO_OF_WASHES_PROVIDED__c</fullName>
        <label>Number of Washes Provided</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVI__c</fullName>
        <description>Net Vehicle Investment</description>
        <label>NVI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NonCompliantCAUnits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NonCompliantCAUnits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ONSITE_MAINTENANCE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onsite Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OS_Gallons__c</fullName>
        <label>OS Gallons</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Odometer__c</fullName>
        <label>Odometer</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Out_Service_Date__c</fullName>
        <label>Out Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overstock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overstock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PACKAGE_NUM__c</fullName>
        <description>Package Number</description>
        <label>Package #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PARKING__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PEGGED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pegged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PHYSICAL_DAMAGE_DEDUCTIBLE__c</fullName>
        <label>Physical Damage Insurance Deductible</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PHY_DAMAGE_RESPONSIBILITY__c</fullName>
        <label>Physical Damage Insurance Provider</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PICKUP_DLVRY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pickup / Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PP_Tax__c</fullName>
        <label>PP Tax</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRODUCT_LINE__c</fullName>
        <description>Product Line</description>
        <label>Product Line</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Date__c</fullName>
        <label>Package Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phy_Dmg_Ins__c</fullName>
        <label>Phy Dmg Ins</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_Units__c</fullName>
        <formula>IF
(
OR(ISPICKVAL(Vehicle_Type__c,&quot;Truck&quot;),ISPICKVAL(Vehicle_Type__c,&quot;Tractor&quot;)), 1, 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Detail__c</fullName>
        <description>Product Detail as indicated in the contract package</description>
        <label>Product Detail</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Used to identify the matching Product for Renewals.</description>
        <formula>PRODUCT_LINE__c &amp; &quot;-&quot; &amp; SAM_CLASS__c &amp; &quot;-&quot; &amp; Renewal_Default_Type__c</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REAR_AXLE_MDL__c</fullName>
        <label>Rear Axle Model</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REAR_AXLE_MFG__c</fullName>
        <label>Rear Axle MFG</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REAR_AXLE_TYP__c</fullName>
        <label>Rear Axle Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REAR_AXLE_WT__c</fullName>
        <label>REAR AXLE WT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REEFER_MDL__c</fullName>
        <label>Reefer Model</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REEFER_MFG__c</fullName>
        <label>Reefer MFG</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REEFER_SRVC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reefer Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REEFER_Serial_Num__c</fullName>
        <label>Reefer Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REEFER_Year__c</fullName>
        <label>Reefer Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REFR_HR_NO__c</fullName>
        <label>Rated Reefer Hrs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REV_435__c</fullName>
        <label>REV 435</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REV_436__c</fullName>
        <label>REV 436</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSM_Ac_Product_Line__c</fullName>
        <formula>IF(PRODUCT_LINE__c==&apos;FSL&apos;,&apos;FSL&apos;, IF(PRODUCT_LINE__c==&apos;RPM&apos;,&apos;RPM&apos;, IF(PRODUCT_LINE__c==&apos;NRV&apos;,&apos;NRV&apos;, IF(PRODUCT_LINE__c==&apos;Rental&apos;,&apos;Rental&apos; , &apos;&apos;) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RS Account Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Account_Number__c</fullName>
        <description>RydeSmart Account number</description>
        <label>Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSM_Add_Service_current_count__c</fullName>
        <formula>IF(INCLUDES(RSM_Additional_Services__c , &apos;Business Intelligence&apos;),1,0 )+ IF(INCLUDES(RSM_Additional_Services__c, &apos;Safety Analytics&apos;),1,0 ) + IF(INCLUDES(RSM_Additional_Services__c, &apos;Navigation&apos;),1,0 )+ IF(INCLUDES(RSM_Additional_Services__c, &apos;Speed gauge&apos;),1,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSM Add Service current count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSM_Addition_Service_prior_count__c</fullName>
        <label>RSM Addition Service prior count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSM_Additional_Services__c</fullName>
        <label>Additional Services</label>
        <picklist>
            <picklistValues>
                <fullName>Business Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speed gauge</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RSM_Billing_Activation_Date__c</fullName>
        <description>RydeSmart Billing Activation date</description>
        <label>Billing Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSM_Billing_Email_Date__c</fullName>
        <description>Date when Email was sent to activate billing</description>
        <label>Billing Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSM_Billing_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSM_Consider_Leasing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSM Consider Leasing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSM_Current_Rental_Agreement__c</fullName>
        <label>Current Rental Agreement #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RSM Service field will let you know whether the vehicle is using RydeSmart service or not.</description>
        <label>RydeSmart Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSM_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSM_Device_Status__c</fullName>
        <label>Device Status</label>
        <picklist>
            <picklistValues>
                <fullName>Removed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed with Repairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Device</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSM_First_Bread_Crumb__c</fullName>
        <label>First Bread Crumb</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
</CustomObject>